app/assets/stylesheets/layout/page_specific/_content_hub.scss
// Content Hub Variables --
// Colours
$content-hub-title-color: $color-black;
$content-hub-bgcolor: $color-grey-eight;
$content-hub-module-bgcolor: $color-white;
$content-hub-module-reversecolor: $color-white;
$content-hub-module-reverseBGcolor: $color-black;

// Widths
$content-hub-page-width: gridsystem-width(12) - $gutter-width; // unit: px
$content-hub-modules-gutter: $baseline-unit * $base-font-size * 1px / ($baseline-unit * 0 + 1); // unit: px
$content-hub-horizontal-space: $content-hub-modules-gutter * 3; // unit: px
$content-hub-width-one-module: px((($content-hub-page-width) - ($content-hub-modules-gutter * 2)) / 3px); // units: em
$content-hub-width-two-module: ($content-hub-width-one-module * 2) + px($content-hub-modules-gutter / ($content-hub-modules-gutter * 0 + 1)); // units: em
$content-hub_width_three-module: px($content-hub-page-width / ($content-hub-page-width * 0 + 1)); // units: em
$content-hub-module-margin-width: (px(($content-hub-horizontal-space) / ($content-hub-horizontal-space * 0 + 1)) / $content-hub-width-one-module) * 100%; // unit: %

// Breakpoints
// 1 column to 2 columns (when viewport width > 2 columns + gutters)
$content-hub-one-col-breakpoint: $content-hub-width-two-module + px($gutter-width / ($gutter-width * 0 + 1)); // units: em
// 2 columns to 3 columns (when viewport width > 3 columns + gutters)
$content-hub-two-col-breakpoint: $content-hub-width-three-module + px($gutter-width * 2 / ($gutter-width * 0 + 1)); // units: em
// -- Content Hub Variables

.l-content-hub__main {
  background: $content-hub-bgcolor;
}

.l-content-hub__title {
  max-width: $content-hub-width-one-module;
  margin-left: auto;
  margin-right: auto;
  display: block;
  float: none;
  margin-top: $baseline-unit * 3;
  margin-bottom: $baseline-unit * 3;

  @include respond-to($content-hub-one-col-breakpoint) {
    max-width: 100%;
    width: $content-hub_width_two-module;
  }

  @include respond-to($content-hub-two-col-breakpoint) {
    width: $content-hub_width_three-module;
  }
}

.l-content-hub__hero {
  clear: left;
  background: $content-hub-module-bgcolor;
  max-width: $content-hub-width-one-module;
  margin-left: auto;
  margin-right: auto;
  margin-bottom: $baseline-unit;

  @include clearfix();

  @include respond-to($content-hub-one-col-breakpoint) {
    max-width: 100%;
    width: $content-hub_width_two-module;
  }

  @include respond-to($content-hub-two-col-breakpoint) {
    width: $content-hub_width_three-module;
  }
}

.l-content-hub__hero__inner {
  position: relative;
  padding-bottom: $baseline-unit*3;

  @include respond-to($content-hub-one-col-breakpoint) {
    @include clearfix();
    min-height: $content-hub-width-one-module;
    padding-top: $baseline-unit*3;
  }
}

.l-content-hub__hero__content {
  padding: 0 $content-hub-horizontal-space;

  @include respond-to($content-hub-one-col-breakpoint) {
    width: 50%;
    float: right;
  }
}

.l-content-hub__hero__content {
  @include respond-to($content-hub-one-col-breakpoint) {
    @include body(20, 27);
  }
}

.l-content-hub__modules {
  @include clearfix();

  max-width: $content-hub-width-one-module;
  margin-left: auto;
  margin-right: auto;

  @include respond-to($content-hub-one-col-breakpoint) {
    max-width: 100%;
    width: $content-hub_width_two-module;
    padding-bottom: $baseline-unit*10;
  }

  @include respond-to($content-hub-two-col-breakpoint) {
    width: $content-hub_width_three-module;
  }
}

.l-content-hub__modules__content {
  @include respond-to($content-hub-one-col-breakpoint) {
    margin: 0 (0 - ($content-hub-modules-gutter / 2));
  }
}

.l-content-hub__module {
  position: relative;
  background: $color-white;
  margin-bottom: $baseline-unit;

  @include clearfix();

  @include respond-to($content-hub-one-col-breakpoint) {
    width: $content-hub-width-one-module;
    margin-left: $content-hub-modules-gutter / 2;
    margin-right: $content-hub-modules-gutter / 2;
    float: left;
  }
}

.l-content-hub__module__inner {
  $padding: $baseline-unit * 3;

  margin-left: $content-hub-module-margin-width;
  margin-right: $content-hub-module-margin-width;
  padding-top: $padding;
  padding-bottom: $padding;

  @include respond-to($content-hub-one-col-breakpoint) {
    height: $content-hub-width-one-module;
  }
}

.l-content-hub__module__image {
  padding-bottom: 50%;
  background-size: cover;
  background-repeat: no-repeat;
  background-position: 50% 50%;
}

